user put + delete + create

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -13,8 +13,8 @@ security:
     dev:
       pattern: ^/(_(profiler|wdt)|css|images|js)/
       security: false
-        #    main:
-        #      lazy: true
+      #    main:
+      #      lazy: true
       #      provider: app_user_providerfdd719e8855fdf770a5141fd0afb817b
 
       #      json_login:
@@ -44,8 +44,9 @@ security:
   # Note: Only the *first* access control that matches will be used
   access_control:
     - { path: ^/api/login, roles: PUBLIC_ACCESS }
+    - { path: ^/api/admin, roles: ROLE_ADMIN }
     - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
-    - { path: ^/api/amin, roles: ADMIN }
+
 
 when@test:
   security:
