--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,6 +20,8 @@ services:
       context: ./php
     ports:
       - "8080:80"
+    extra_hosts:
+      - host.docker.internal:host-gateway
     volumes:
       - ./apache/default.conf:/etc/apache2/sites-enabled/000-default.conf
       - ./app:/var/www
