--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -8,7 +8,14 @@ RUN apt-get update \
     && docker-php-ext-configure zip \
     && docker-php-ext-install zip
 
+RUN pecl install xdebug-3.3.1 \
+    && docker-php-ext-enable xdebug \
+    && echo "xdebug.mode=debug" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
+    && echo "xdebug.client_host=host.docker.internal" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+
 RUN a2enmod rewrite && a2enmod ssl && a2enmod socache_shmcb
+
+COPY ./php.ini /usr/local/etc/php
 
 WORKDIR /var/www
 
