--- a/apache/default.conf
+++ b/apache/default.conf
@@ -1,3 +1,5 @@
+LoadModule ssl_module /usr/lib/apache2/modules/mod_ssl.so
+
 <VirtualHost *:80>
     DocumentRoot /var/www/public
  
@@ -14,4 +16,28 @@
             RewriteRule .* - [e=HTTP_AUTHORIZATION:%1]
         </IfModule>
     </Directory>
+</VirtualHost>
+
+<VirtualHost *:443>
+
+  ServerName santaapi.local
+  DocumentRoot /var/www/public
+  ErrorLog ${APACHE_LOG_DIR}/error.log
+  CustomLog ${APACHE_LOG_DIR}/access.log combined
+
+  SSLEngine on
+
+  SSLCertificateFile "/etc/apache2/sites-available/ssl/localhost.crt"
+  SSLCertificateKeyFile "/etc/apache2/sites-available/ssl/localhost.key"
+
+  <FilesMatch "\.(cgi|shtml|phtml|php)$">
+      SSLOptions +StdEnvVars
+  </FilesMatch>
+
+  <Directory /var/www/public>
+      Options Indexes FollowSymLinks Includes execCGI
+      AllowOverride All
+      Require all granted
+  </Directory>
+
 </VirtualHost>
