--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,11 +20,16 @@ services:
       context: ./php
     ports:
       - "8080:80"
+      - "443:443"
     extra_hosts:
       - host.docker.internal:host-gateway
+      - "santaApi.local:127.0.0.1"
+    hostname: santaApi.local
+    domainname: local
     volumes:
       - ./apache/default.conf:/etc/apache2/sites-enabled/000-default.conf
       - ./app:/var/www
+      - ./apache/ssl:/etc/apache2/sites-available/ssl
     depends_on:
       - database
 
