--- a/php/php.ini
+++ b/php/php.ini
@@ -1,5 +1,4 @@
 [xdebug]
 xdebug.mode = debug
-xdebug.start_with_request = yes
-xdebug.client_host = host.docker.internal
+xdebug.discover_client_host = 1
 
