--- a/app/config/packages/security.yaml
+++ b/app/config/packages/security.yaml
@@ -20,7 +20,7 @@ security:
       #      json_login:
       #        check_path: api_login
       #      access_token:
-      #        token_handler: App\Security\AccessTokenHandler
+      #        token_handler: App\security\AccessTokenHandler
 
     login:
       pattern: ^/api/login
