--- a/apache/default.conf
+++ b/apache/default.conf
@@ -4,12 +4,20 @@ LoadModule ssl_module /usr/lib/apache2/modules/mod_ssl.so
     DocumentRoot /var/www/public
  
     <Directory /var/www/public>
+
+        Header always set Access-Control-Allow-Origin "*"
+        Header always set Access-Control-Allow-Headers "*"
+        Header always set Access-Control-Allow-Methods "*"
+        Header always set Access-Control-Expose-Headers "Content-Security-Policy, Location"
+        Header always set Access-Control-Max-Age "600"
         AllowOverride None
         Order Allow,Deny
         Allow from All
  
         <IfModule mod_rewrite.c>
             RewriteEngine On
+            RewriteCond %{REQUEST_METHOD} OPTIONS
+            RewriteRule ^(.*)$ $1 [R=200,L]
             RewriteCond %{REQUEST_FILENAME} !-f
             RewriteRule ^(.*)$ index.php [QSA,L]
             RewriteCond %{HTTP:Authorization} ^(.*)
