--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,3 @@
-version: '3.8'
 
 services:
   database:
@@ -32,3 +31,12 @@ services:
       - ./apache/ssl:/etc/apache2/sites-available/ssl
     depends_on:
       - database
+
+  maildev:
+    image: maildev/maildev
+    container_name: maildev_docker_symfony
+    command: bin/maildev --web 80 --smtp 25 --hide-extensions STARTTLS
+    ports:
+      - "8081:80"
+    restart: always
+
