--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 app/var
 app/vendor
 app/config/jwt
+app/migrations
 ###< symfony/framework-bundle ###
 
 ###> phpunit/phpunit ###
@@ -27,3 +28,6 @@ app/config/jwt
 ###< lexik/jwt-authentication-bundle ###
 
 /app/config/packages/nelmio_cors.yaml
+
+/app/config/packages/messenger.yaml
+/app/config/services.yaml
