--- a/app/config/packages/security.yaml
+++ b/app/config/packages/security.yaml
@@ -34,6 +34,9 @@ security:
       pattern: ^/api
       stateless: true
       jwt: ~
+    main:
+      custom_authenticators:
+        - App\Security\GoogleAuthenticator
 
       # activate different ways to authenticate
       # https://symfony.com/doc/current/security.html#the-firewall
