--- a/app/config/services.yaml
+++ b/app/config/services.yaml
@@ -4,24 +4,35 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
-  app.front_base_url: 'http://localhost:3000'
+  app.front_base_url: "http://localhost:3000"
 
 services:
   # default configuration for services in *this* file
   _defaults:
-    autowire: true      # Automatically injects dependencies in your services.
+    autowire: true # Automatically injects dependencies in your services.
     autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
     bind:
-      $sender_email: '%env(SENDER_MAIL)%'
+      $sender_email: "%env(SENDER_MAIL)%"
 
   # makes classes in src/ available to be used as services
   # this creates a service per class whose id is the fully-qualified class name
   App\:
-    resource: '../src/'
+    resource: "../src/"
     exclude:
-      - '../src/DependencyInjection/'
-      - '../src/Entity/'
-      - '../src/Kernel.php'
+      - "../src/DependencyInjection/"
+      - "../src/Entity/"
+      - "../src/Kernel.php"
 
   # add more service definitions when explicit configuration is needed
   # please note that last definitions always *replace* previous ones
+  App\Security\AbstractOAuthAuthenticator:
+    abstract: true
+    arguments:
+      $clientRegistry: '@KnpU\OAuth2ClientBundle\Client\ClientRegistry'
+      $userRepository: '@App\Repository\UserRepository'
+      $registrationService: '@App\Security\OAuthRegistrationService'
+      $jwtManager: "@lexik_jwt_authentication.jwt_manager"
+      $eventDispatcher: "@event_dispatcher"
+
+  App\Security\GoogleAuthenticator:
+    parent: App\Security\AbstractOAuthAuthenticator
