--- a/app/composer.json
+++ b/app/composer.json
@@ -14,6 +14,7 @@
         "knpuniversity/oauth2-client-bundle": "^2.18",
         "league/oauth2-google": "^4.0",
         "lexik/jwt-authentication-bundle": "^2.20",
+        "nelmio/api-doc-bundle": "^4.33",
         "nelmio/cors-bundle": "^2.4",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.24",
