--- a/app/config/packages/security.yaml
+++ b/app/config/packages/security.yaml
@@ -44,8 +44,10 @@ security:
   # Easy way to control access for large sections of your site
   # Note: Only the *first* access control that matches will be used
   access_control:
+    - { path: "^/api/admin", roles: ROLE_ADMIN }
     - { path: ^/oauth, roles: PUBLIC_ACCESS }
     - { path: ^/api/public, roles: PUBLIC_ACCESS }
+    - { path: ^/api/signin, roles: PUBLIC_ACCESS }
     - { path: ^/api/doc, roles: PUBLIC_ACCESS }
     - { path: ^/api, roles: ROLE_USER }
     - { path: ^/forgot-password, roles: PUBLIC_ACCESS }
