--- a/app/config/services.yaml
+++ b/app/config/services.yaml
@@ -13,6 +13,41 @@ services:
     autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
     bind:
       $sender_email: "%env(SENDER_MAIL)%"
+      $frontBaseUrl: "%app.front_base_url%"
+
+  # Services métier
+  App\Service\EventService:
+    arguments:
+      $entityManager: "@doctrine.orm.entity_manager"
+      $giftListRepository: '@App\Repository\GiftListRepository'
+
+  App\Service\InvitationService:
+    arguments:
+      $invitationRepository: '@App\Repository\InvitationRepository'
+      $entityManager: "@doctrine.orm.entity_manager"
+      $tokenGenerator: "@security.csrf.token_generator"
+      $mailerService: '@App\Service\MailerService'
+      $eventService: '@App\Service\EventService'
+      $frontBaseUrl: "%app.front_base_url%"
+
+  App\Service\SantaService:
+    arguments:
+      $santaRepository: '@App\Repository\SantaRepository'
+      $entityManager: "@doctrine.orm.entity_manager"
+
+  App\Service\EventValidationService:
+    arguments:
+      $validator: "@validator"
+
+      # Si vous n'avez pas encore de EventVoter, voici un exemple
+  App\Security\EventVoter:
+    tags:
+      - { name: security.voter }
+
+      # Configuration du MailerService s'il n'existe pas déjà
+  App\Service\MailerService:
+    arguments:
+      $twig: "@twig"
 
   # makes classes in src/ available to be used as services
   # this creates a service per class whose id is the fully-qualified class name
