--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -48,7 +48,7 @@ services:
   maildev:
     image: docker.io/maildev/maildev
     container_name: maildev_docker_symfony
-    command: bin/maildev --web 80 --smtp 25 --hide-extensions STARTTLS
     ports:
-      - "8081:80"
+    - "1080:1080"  # Interface web
+    - "1025:1025"  # SMTP
     restart: always
